--- a/hugo.toml
+++ b/hugo.toml
@@ -1,6 +1,6 @@
 baseURL = 'https://example.org/'
 languageCode = 'en-us'
-title = 'My New Hugo Site'
+title = "It 's so meow"
 
 [[menus.main]]
 name = 'Home'
@@ -13,9 +13,17 @@ pageRef = '/posts'
 weight = 20
 
 [[menus.main]]
-name = 'Tags'
-pageRef = '/tags'
+name = "Tags"
+pageRef = "/tags"
+weight = 25
+
+
+
+[[menus.main]]
+name = 'About'
+pageRef = '/about'
 weight = 30
+
 
 [module]
   [module.hugoVersion]
