--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
   "name": "codex",
   "type": "module",
+  "scripts": {
+    "serve": "concurrently \"npm run tailwind\" \"npm run hugo:server\"",
+    "tailwind": "tailwindcss -i base.css -o assets/css/main.css --watch --minify",
+    "hugo:server": "hugo server"
+  },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
     "autoprefixer": "^10.4.16",
     "bun-types": "latest",
+    "concurrently": "^8.2.2",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5"
   },
