Add tags styling and remove file from VCS
This commit introduces styling for tags in CSS, adds tag based structure in list.html, tags.html and terms.html files. A command has been modified in package.json. This was done to add visual enhancements to the tags used in the web pages and to improve the overall user experience. Moreover, tailwind compiled css file has been added to .gitignore to prevent unwanted file to be versioned.

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "scripts": {
     "serve": "concurrently \"npm run tailwind\" \"npm run hugo:server\"",
-    "tailwind": "tailwindcss -i base.css -o assets/css/main.css --watch --minify",
+    "tailwind": "tailwindcss -i base.css -o assets/css/main.css --watch ",
     "hugo:server": "hugo server"
   },
   "devDependencies": {
