--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,8 +24,16 @@ jobs:
       - name: install dependences
         run: bun install
 
+      - name: Setup Hugo
+        uses: peaceiris/actions-hugo@v2
+        with:
+          hugo-version: '0.119.0'
+
       - name: compiled tailwind
         run: bunx tailwindcss -i base.css -o assets/css/main.css --minify
+
+      - name: gen chromacss
+        run: hugo gen chromastyles --style=emacs > assets/css/highlight.css
 
       - name: dist
         run: |
